tests/machine/x/hs/substring_builtin.error

/workspace/mochi/tests/machine/x/hs/substring_builtin.hs:14:13: error:
    Variable not in scope: substring :: String -> t0 -> t1 -> String
   |
14 |   putStrLn (substring "mochi" 1 4)
   |             ^^^^^^^^^


Context around line 14:
   12| main :: IO ()
   13| main = do
   14|   putStrLn (substring "mochi" 1 4)
   15| 
